<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <project.task.saurabh.imagepro.utils.BoldTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:gravity="bottom"
        android:text="@string/alert"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:minLines="5"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:textStyle="italic" />

    <project.task.saurabh.imagepro.utils.RegularTextView
        android:id="@+id/tvOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/button"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

</LinearLayout>