<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <project.task.saurabh.imagepro.utils.BoldTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:gravity="bottom"
        android:text="@string/selected_pic"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_18" />


    <ImageView
        android:id="@+id/ivDisp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:contentDescription="@string/selected_pic" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/box"
        android:gravity="start"
        android:hint="@string/add_description"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/dp_5"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">


        <project.task.saurabh.imagepro.utils.RegularTextView
            android:id="@+id/tvAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <project.task.saurabh.imagepro.utils.RegularTextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>


</LinearLayout>